seer-core/tests/snapshots/format_snapshots__human_follow_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
expression: human ().format_follow (& fixture_follow())
---

[1;95mDNS Follow Complete: example.com A[0m
[37m──────────────────────────────────[0m
  [1;96mIterations completed[0m: 2/3
  [1;96mStatus[0m: [1;93mInterrupted[0m
  [1;96mTotal changes detected[0m: [1;93m1[0m
  [1;96mDuration[0m: [97m1m 5s[0m

  [1;96mIteration Details[0m:
    [12:00:00] #1: 1 record(s) - [97minitial[0m
    [12:00:30] #2: 1 record(s) - [1;93mCHANGED[0m
