seer-core/tests/snapshots/format_snapshots__human_headers_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
expression: human ().format_headers (& fixture_headers())
---

[1;95mHTTP security headers: example.com[0m
[37m──────────────────────────────────[0m
[1;96mGrade[0m: [1;93mC[0m ([97m55[0m/100)
[1;96mURL[0m: [97mhttps://www.example.com/[0m [90m[HTTP 200][0m
[1;96mRedirects followed[0m: [97m1[0m

[1;96mstrict-transport-security[0m: [1;93mmoderate[0m [90mmax-age=31536000[0m
[1;96mcontent-security-policy[0m: [1;91mabsent[0m

[1;96mCookies:[0m
  [97msession[0m [[1;93mweak[0m] [90m[1;92mSecure[0m[90m, [1;91mno HttpOnly[0m[90m, [1;91mno SameSite[0m[90m[0m

[1;96mDisclosed software:[0m
  [90mserver[0m: [1;93mnginx/1.25.3[0m

[1;96mAdvisories:[0m
  [1;93m•[0m Content-Security-Policy is missing
