seer-core/tests/snapshots/format_snapshots__human_posture_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 351
expression: human().format_posture(&fixture_posture())
---

[1;95mEmail posture: example.com[0m
[37m──────────────────────────[0m
[1;96mSPF[0m: [1;92mstrict[0m [90m-all[0m
[1;96mDMARC[0m: [1;93mmoderate[0m [90mp=quarantine[0m
[1;96mMTA-STS[0m: [1;91mabsent[0m
[1;96mBIMI[0m: [97mpresent[0m
[1;96mDANE[0m: [97mpresent[0m [90m1 TLSA record(s)[0m

[1;96mAdvisories:[0m
  [1;93m•[0m DMARC pct=50 applies the policy to only half of spoofed mail
  [1;93m•[0m MTA-STS is not configured
