seer-core/tests/snapshots/format_snapshots__human_rdap_autnum_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
expression: human ().format_rdap (& fixture_rdap_autnum())
---

[1;95mRDAP: EXAMPLE-AS[0m
[37m────────────────[0m
  [1;96mHandle[0m: [97mAS64496[0m
  [1;96mAS Number[0m: [97mAS64496 - AS64511[0m
